--- a/Sabertooth/Sabertooth.vcxproj
+++ b/Sabertooth/Sabertooth.vcxproj
@@ -21,8 +21,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{EF584987-9C37-48F1-91F9-B4DB96AB1EBF}</ProjectGuid>
     <RootNamespace>Sabertooth</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
-    <ProjectName> </ProjectName>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>
+    </ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
